--- a/scss/import/header.scss
+++ b/scss/import/header.scss
@@ -3,8 +3,39 @@
 
 header{
     width: 100%;
-    height: 70px;
+    padding: 25px 5px 25px 5px; 
+    height: auto;
+    max-height: $header-height;
     background-color: $light-white;
     border-bottom: solid 0.1em $border-color; 
     @include shadow-dark;
+    position: fixed;
+    font-family: "Lato",sans-serif;
+    
+    .container{
+        @include flex(row);
+        background-color: gray;
+        .logo {
+            padding-left :10px;
+            background-color: red;
+            a{
+                text-decoration: none;
+                color: $green;
+                font-size: $size-large;
+                font-weight: 500;
+            }
+            p {
+                padding-left: 5px;
+                padding-bottom: 5px;
+                color: $dark-grey;
+                font-size: $size-medium;
+            }
+        }
+        .nav{
+            background-color: green;
+            align-items: flex-end;
+            @include flex_docked(row,flex-end);
+        }
+    }
+    
 }
