--- a/scss/partials/variables.scss
+++ b/scss/partials/variables.scss
@@ -1,7 +1,15 @@
 
 //*** Colors ***//
 
-$green : #34aE8a;
-$grey : rgb(232, 241, 239);
+$green : #33866c;
+$dark-grey : #727473;
+$xlight-grey : rgb(232, 241, 239);
 $light-white :rgb(255, 255, 255);
 $border-color: #ececec;
+
+//*** dimens ***//
+$header-height:555px;
+$size-small:0.8em;
+$size-medium:1em;
+$size-large:1.4em;
+$size-xlarge:2em;
