--- a/scss/style.css
+++ b/scss/style.css
@@ -1,17 +1,49 @@
 header {
   width: 100%;
-  height: 70px;
+  padding: 25px 5px 25px 5px;
+  height: auto;
+  max-height: 555px;
   background-color: white;
   border-bottom: solid 0.1em #ececec;
   -webkit-box-shadows: 0 0 20px rgba(48, 46, 77, 0.15);
   -moz-box-shadows: 0 0 20px rgba(48, 46, 77, 0.15);
-  box-shadow: 0 0 20px rgba(48, 46, 77, 0.15); }
+  box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+  position: fixed;
+  font-family: "Lato",sans-serif; }
+  header .container {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    background-color: gray; }
+    header .container .logo {
+      padding-left: 10px;
+      background-color: red; }
+      header .container .logo a {
+        text-decoration: none;
+        color: #33866c;
+        font-size: 1.4em;
+        font-weight: 500; }
+      header .container .logo p {
+        padding-left: 5px;
+        padding-bottom: 5px;
+        color: #727473;
+        font-size: 1em; }
+    header .container .nav {
+      background-color: green;
+      align-items: flex-end;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      flex-direction: row; }
 
 * {
   margin: 0;
   padding: 0; }
 
 body {
-  background-color: #e8f1ef; }
+  background-color: #e8f1ef;
+  height: 2000px; }
+  body .main-container .main {
+    padding-top: 570px; }
 
 /*# sourceMappingURL=style.css.map */
