--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,5 +7,11 @@
  padding: 0;
 }
 body{
-    background-color: $grey;
+    background-color: $xlight-grey;
+    height: 2000px;
+    .main-container{
+        .main{ 
+            padding-top: $header-height+15px;
+        }
+    }
 }
