--- a/scss/import/header.scss
+++ b/scss/import/header.scss
@@ -1,4 +1,3 @@
-
 @import "mixins.scss";
 
 header{
@@ -11,13 +10,17 @@ header{
     @include shadow-dark;
     position: fixed;
     font-family: "Lato",sans-serif;
-    
+    font-size: $size-medium;
     .container{
-        @include flex(row);
-        background-color: gray;
-        .logo {
+        @include flex(row); 
+        @include responsive{ 
+            @include flex(column); 
+        }
+        .logo { 
+             flex-basis: 20%;
             padding-left :10px;
-            background-color: red;
+            padding-right :10px; 
+            
             a{
                 text-decoration: none;
                 color: $green;
@@ -28,13 +31,36 @@ header{
                 padding-left: 5px;
                 padding-bottom: 5px;
                 color: $dark-grey;
-                font-size: $size-medium;
             }
         }
-        .nav{
-            background-color: green;
-            align-items: flex-end;
-            @include flex_docked(row,flex-end);
+        nav{ 
+            flex-basis: 80%; 
+
+            .nav_list{  
+                display: flex;   
+                padding-right: 25px;
+                padding-left: 25px;
+                justify-content: flex-end; 
+                
+                li{
+                    padding: 12px;
+                    list-style: none; 
+                    font-size: $size-slarge;
+                    border-inline-start: solid 1px $border-color; 
+
+                    &:last-child{
+                        border-right:solid 1px $border-color;
+                    }
+                    a{ 
+                        @include transition(0.5); 
+                        &:hover{ 
+                            color: $light-dark-rgb; 
+                            @include transform(1);
+                        } 
+                    }
+                }
+                
+            }
         }
     }
     
