--- a/scss/partials/variables.scss
+++ b/scss/partials/variables.scss
@@ -2,14 +2,17 @@
 //*** Colors ***//
 
 $green : #33866c;
+$red : #e45253;
 $dark-grey : #727473;
 $xlight-grey : rgb(232, 241, 239);
 $light-white :rgb(255, 255, 255);
+$light-dark-rgb :rgba(39, 39, 39, 0.568);
 $border-color: #ececec;
 
 //*** dimens ***//
-$header-height:555px;
+$header-height:125px;
 $size-small:0.8em;
 $size-medium:1em;
+$size-slarge:1.2em;
 $size-large:1.4em;
 $size-xlarge:2em;
