--- a/scss/style.css
+++ b/scss/style.css
@@ -2,22 +2,29 @@ header {
   width: 100%;
   padding: 25px 5px 25px 5px;
   height: auto;
-  max-height: 555px;
+  max-height: 125px;
   background-color: white;
   border-bottom: solid 0.1em #ececec;
   -webkit-box-shadows: 0 0 20px rgba(48, 46, 77, 0.15);
   -moz-box-shadows: 0 0 20px rgba(48, 46, 77, 0.15);
+  -o-box-shadows: 0 0 20px rgba(48, 46, 77, 0.15);
   box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
   position: fixed;
-  font-family: "Lato",sans-serif; }
+  font-family: "Lato",sans-serif;
+  font-size: 1em; }
   header .container {
     display: flex;
     align-items: center;
-    flex-direction: row;
-    background-color: gray; }
+    flex-direction: row; }
+    @media (max-width: 800px) {
+      header .container {
+        display: flex;
+        align-items: center;
+        flex-direction: column; } }
     header .container .logo {
+      flex-basis: 20%;
       padding-left: 10px;
-      background-color: red; }
+      padding-right: 10px; }
       header .container .logo a {
         text-decoration: none;
         color: #33866c;
@@ -26,24 +33,46 @@ header {
       header .container .logo p {
         padding-left: 5px;
         padding-bottom: 5px;
-        color: #727473;
-        font-size: 1em; }
-    header .container .nav {
-      background-color: green;
-      align-items: flex-end;
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-      flex-direction: row; }
+        color: #727473; }
+    header .container nav {
+      flex-basis: 80%; }
+      header .container nav .nav_list {
+        display: flex;
+        padding-right: 25px;
+        padding-left: 25px;
+        justify-content: flex-end; }
+        header .container nav .nav_list li {
+          padding: 12px;
+          list-style: none;
+          font-size: 1.2em;
+          border-inline-start: solid 1px #ececec; }
+          header .container nav .nav_list li:last-child {
+            border-right: solid 1px #ececec; }
+          header .container nav .nav_list li a {
+            -webkit-transition: all 0.5s ease;
+            -moz-transition: all 0.5s ease;
+            -o-transition: all 0.5s ease;
+            transition: all 0.5s ease; }
+            header .container nav .nav_list li a:hover {
+              color: rgba(39, 39, 39, 0.568);
+              -webkit-transform: scale(1);
+              -moz-transform: scale(1);
+              transform: scale(1);
+              padding-left: 10px;
+              padding-right: 10px; }
 
 * {
   margin: 0;
   padding: 0; }
 
+a {
+  text-decoration: none;
+  color: black; }
+
 body {
   background-color: #e8f1ef;
   height: 2000px; }
   body .main-container .main {
-    padding-top: 570px; }
+    padding-top: 140px; }
 
 /*# sourceMappingURL=style.css.map */
