--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,10 +1,14 @@
-@import "partials/variables.scss";
+@import "partials/variables.scss";  
 @import "import/header.scss";
 
  
 *{ 
  margin: 0;
  padding: 0;
+}
+a{ 
+    text-decoration: none;
+    color: black;
 }
 body{
     background-color: $xlight-grey;
