--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
-@import "partials/variables.scss";  
-@import "import/header.scss";
+@import "partials/variables";  
+@import "partials/header.scss";
 
  
 *{ 
