html coded in #main section

--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -10,9 +10,13 @@ $light-dark-rgb :rgba(39, 39, 39, 0.568);
 $border-color: #ececec;
 
 //*** dimens ***//
-$header-height:150px;
 $size-small:0.8em;
 $size-medium:1em;
 $size-slarge:1.2em;
 $size-large:1.4em;
 $size-xlarge:2em;
+
+$header-height:150px;
+$header-height-800px:197px;
+
+$info-width:20px;
