--- a/scss/partials/_responsive.scss
+++ b/scss/partials/_responsive.scss
@@ -7,6 +7,13 @@
         header .container { 
             @include flex(column);
         }
+        body{ 
+            .sections{
+                .info{ 
+                    padding-top: $header-height-800px+15px;
+                }
+            }
+        }
     } 
 }
 
