i've done the information section in #main-section

--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -24,5 +24,10 @@
     transform: scale($scale);
     padding-left: 10px;
     padding-right: 10px;
+} 
+@mixin border-radius($radius){
+    -webkit-border-radius : $radius;
+    -moz-border-radius: $radius;
+    border-radius: $radius;
 }
 
