--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -15,6 +15,7 @@ $size-medium:1em;
 $size-slarge:1.2em;
 $size-large:1.4em;
 $size-xlarge:2em;
+$size-xxlarge:2.5em;
 
 $header-height:150px;
 $header-height-800px:197px;
