--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,7 @@ body{
     background-color: $xlight-grey;
     height: 2000px;
     .sections{
-        .info{ 
+        #info{ 
             padding-top: $header-height+15px;
         }
     }
