--- a/scss/style.css
+++ b/scss/style.css
@@ -60,6 +60,9 @@ header {
               padding-right: 10px; }
 
 @media (max-width: 800px) {
+  body {
+    background-color: rgba(152, 251, 152, 0.137); }
+
   header .container {
     display: flex;
     align-items: center;
@@ -68,12 +71,16 @@ header {
   #info .container .card {
     display: flex;
     align-items: center;
-    flex-direction: column; } }
-section {
+    flex-direction: column; }
+
+  #prevent .no-box-container .card .card-text {
+    font-size: 0.8em; } }
+#info {
   width: 100%;
   display: flex;
-  justify-content: center; }
-  section .container {
+  justify-content: center;
+  margin-bottom: 50px; }
+  #info .container {
     width: 75%;
     padding: 25px;
     background-color: white;
@@ -85,34 +92,37 @@ section {
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-radius: 20px; }
-    section .container .card {
+    #info .container .card {
       display: flex;
       align-items: center;
       flex-direction: row; }
-      section .container .card .card-img img {
+      #info .container .card .card-img img {
         width: auto;
         height: auto;
         max-width: 350px;
         max-height: 260px; }
-      section .container .card .card-text {
+      #info .container .card .card-text {
         display: flex;
         align-items: center;
         flex-direction: column;
         justify-content: center;
         align-content: center;
         padding-bottom: 30px; }
-        section .container .card .card-text span {
+        #info .container .card .card-text span {
           color: #33866c;
           font-weight: bold; }
-        section .container .card .card-text h1 {
+        #info .container .card .card-text h1 {
           align-items: center;
           padding: 50px;
           font-size: 2.5em; }
-        section .container .card .card-text p {
+        #info .container .card .card-text p {
           line-height: 25px;
           padding-bottom: 20px; }
 
 @media (max-width: 800px) {
+  body {
+    background-color: rgba(152, 251, 152, 0.137); }
+
   header .container {
     display: flex;
     align-items: center;
@@ -121,7 +131,63 @@ section {
   #info .container .card {
     display: flex;
     align-items: center;
-    flex-direction: column; } }
+    flex-direction: column; }
+
+  #prevent .no-box-container .card .card-text {
+    font-size: 0.8em; } }
+#prevent {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px; }
+  #prevent .no-box-container {
+    width: 80%;
+    padding: 25px;
+    background-color: transparent;
+    font-family: "Lato",sans-serif; }
+    #prevent .no-box-container .card {
+      display: flex;
+      align-items: center;
+      flex-direction: row; }
+      #prevent .no-box-container .card .card-img img {
+        width: auto;
+        height: auto;
+        max-width: 350px;
+        max-height: 260px; }
+      #prevent .no-box-container .card .card-text {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+        padding-bottom: 30px; }
+        #prevent .no-box-container .card .card-text span {
+          color: #33866c;
+          font-weight: bold; }
+        #prevent .no-box-container .card .card-text h1 {
+          align-items: center;
+          padding: 50px;
+          font-size: 2.5em; }
+        #prevent .no-box-container .card .card-text p {
+          line-height: 25px;
+          padding-bottom: 20px; }
+
+@media (max-width: 800px) {
+  body {
+    background-color: rgba(152, 251, 152, 0.137); }
+
+  header .container {
+    display: flex;
+    align-items: center;
+    flex-direction: column; }
+
+  #info .container .card {
+    display: flex;
+    align-items: center;
+    flex-direction: column; }
+
+  #prevent .no-box-container .card .card-text {
+    font-size: 0.8em; } }
 * {
   margin: 0;
   padding: 0; }
@@ -135,5 +201,22 @@ body {
   height: 2000px; }
   body .sections #info {
     padding-top: 165px; }
+
+@media (max-width: 800px) {
+  body {
+    background-color: rgba(152, 251, 152, 0.137); }
+
+  header .container {
+    display: flex;
+    align-items: center;
+    flex-direction: column; }
+
+  #info .container .card {
+    display: flex;
+    align-items: center;
+    flex-direction: column; }
+
+  #prevent .no-box-container .card .card-text {
+    font-size: 0.8em; } }
 
 /*# sourceMappingURL=style.css.map */
