--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -3,6 +3,7 @@
 
 $green : #33866c;
 $red : #e45253;
+$blue : #0b93fb;
 $dark-grey : #727473;
 $xlight-grey : rgb(232, 241, 239);
 $light-white :rgb(255, 255, 255);
@@ -10,10 +11,13 @@ $light-dark-rgb :rgba(39, 39, 39, 0.568);
 $border-color: #ececec;
 
 //*** dimens ***//
+$size-xsmall:0.6em;
 $size-small:0.8em;
+$size-bsmall:0.9em;
 $size-medium:1em;
 $size-slarge:1.2em;
 $size-large:1.4em;
+$size-xslarge:1.6em;
 $size-xlarge:2em;
 $size-xxlarge:2.5em;
 
