--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 @import "partials/header.scss";
 @import "partials/info.scss";
 @import "partials/prevent.scss";
+@import "partials/question.scss";
 
  
 *{ 
