--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -1,9 +1,10 @@
 
 //*** Colors ***//
 
-$green : #33866c;
+$green : #33866c; 
 $red : #e45253;
 $blue : #0b93fb;
+$dark-red : #e45253;
 $dark-grey : #727473;
 $xlight-grey : rgb(232, 241, 239);
 $light-white :rgb(255, 255, 255);
