--- a/scss/partials/question.scss
+++ b/scss/partials/question.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 
-#info {
+#question {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -14,8 +14,8 @@
         @include border-radius(20px);
         .card{
             @include flex(row);
-            .card-img{
-                margin: 10px; 
+            .card-img{ 
+                margin: 25px;
                 img{
                     width: auto;
                     height: auto;
@@ -38,9 +38,31 @@
                     font-size: $size-xxlarge;
                     
                 }
-                p{
+                .question-container{
+                    @include flex(row);
+                    width: 100%;
                     line-height: 25px;
-                    padding-bottom: 20px;
+
+                    .q-container{
+                        min-height: 200px;
+                        margin: 15px;
+                        margin-bottom: 0;
+                        padding-bottom: 0; 
+                        width: 42%; 
+                        .item{
+                            list-style: none; 
+                            height: 50px;  
+                            padding: 10px 10px 10px 10px;
+                            border-bottom: solid 1px $border-color; 
+                            cursor: pointer;
+                            @include transition(0.4);
+                            &:hover{    
+                                padding-left: 20px;  
+                                color: $red;
+                                border-bottom: solid 1.5px $red;
+                            }
+                        }
+                    }
                     
                 } 
             }
